--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
 <body>
 
         <nav>
+            <div class="dashboard-container">
+                
+                    <uli>
+                        <li><a href="index.html" color : Blue>Home</a></li>
+                        <li><a href="sales.html">Sales Analysis</a></li>
+                        <li><a href="category.html">Category Insights</a></li>
+                        <li><a href="about.html">About Us</a></li>
+                
+                    </uli>
+            </div>
             <ul>
                 <li><a href="#overview">Overview</a></li>
                 <li><a href="#sales">Monthly Sales</a></li>
